--- a/causes.html
+++ b/causes.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Prayaas</title>
+  <title>Raahat- Ek Koshish</title>
   <meta name="coverage" content="Worldwide">
   <meta name="distribution" content="Global">
   <meta name="target" content="all">
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="causes.css" />
-  <link rel="stylesheet" href="thank.css" />
+  
   <!-- Bootstrap Scripts -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -91,7 +91,7 @@
         <h1 class="heading1">Raahat- Ek Koshish</h1>
         <p>At the end of the day it’s not about what you have or even what you’ve accomplished… it’s about who you’ve
           lifted up, who you’ve made better. It’s about what you’ve given back.</p>
-        <button type="button" id="button1" class="btn btn-danger btn-lg">Join us today</button>
+        <button type="button" id="button1" class="btn btn-danger btn-lg"><a href="#causes">Join us today</a></button>
         <br><br>
         <div id="causes"></div>
       </div>
@@ -160,18 +160,7 @@
       <div class="container thankyou-card">
         <div class="row">
           <div class="col-md-6 thank" data-aos="fade-up-right" data-aos-delay="1000">
-            <!--<div class="container-2">
-              <div class="card3" >
-                  <div class="envelope"></div>
-                  <div class="letter"><br>
-                    <h3>Thanks for Donating</h3>
-                      <p>
-                        Thanks for being a part of this noble cause.
-                        We appreciate your efforts!!
-                      </p>
-                  </div>
-              </div>
-            </div>-->
+            
             <img class="donate-kind" src="https://images.pexels.com/photos/271168/pexels-photo-271168.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" >
           </div>
           <div class="col-md-6" data-aos="slide-down" data-aos-anchor-placements="top-bottom" data-aos-ease="ease-in-out" data-aos-duration="1000">
@@ -237,7 +226,7 @@
             <div class="col-lg-4 col-md-4  col-sm-4 col-xs-4 footer-col">
               <ul class="footer-list">
                 <li><a href="Index.html#contact">Contact</a></li>
-                <li><a href="/">Volunteer</a></li>
+                <li><a href="#causes">Donate</a></li>
               </ul>
             </div>
             
