--- a/Impact.html
+++ b/Impact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Prayaas</title>
+  <title>Raahat- Ek Koshish</title>
   <meta name="coverage" content="Worldwide">
   <meta name="distribution" content="Global">
   <meta name="target" content="all">
@@ -97,7 +97,7 @@
       <h1 class="heading1">Raahat - Ek Koshish</h1>
       <p>At the end of the day it’s not about what you have or even what you’ve accomplished… it’s about who you’ve
         lifted up, who you’ve made better. It’s about what you’ve given back.</p>
-      <button type="button" id="button1" class="btn btn-danger btn-lg">Join us today</button>
+      <button type="button" id="button1" class="btn btn-danger btn-lg"><a href="causes.html#causes">Join us today</a></button>
       
     </div>
     <div id="impact"></div>
@@ -306,7 +306,7 @@
           <div class="col-lg-4 col-md-4  col-sm-4 col-xs-4 footer-col">
             <ul class="footer-list">
               <li><a href="Index.html#contact">Contact</a></li>
-              <li><a href="/">Volunteer</a></li>
+              <li><a href="causes.html#causes">Donate</a></li>
             </ul>
           </div>
           
