--- a/causes.html
+++ b/causes.html
@@ -169,9 +169,9 @@
                 STEP TOWARDS SOCIETY
               </div>
               <div class="card-body">
-                <h5 class="card-title">Help The Needy</h5>
+                <h5 class="card-title">Financial Support</h5>
                 <p class="card-text">We can do no great things, only small things with great love</p>
-                <a href="#" class="btn btn-primary">Donate Now</a>
+                <a href="#" class="btn btn-primary">Donate By Cash</a>
               </div>
             </div>
           </div>
@@ -184,7 +184,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">Help The Needy</h5>
-                <p class="card-text">We can do no great things, only small things with great love</p>
+                <p class="card-text">Want to Volunteer or donate some goods and other stuff</p>
                 <a href="#" class="btn btn-primary">Donate By Kind</a>
               </div>
             </div>
