--- a/causes.html
+++ b/causes.html
@@ -39,7 +39,7 @@
 <body>
   <div id="preloader"></div>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top navbar-custom-alt" id="webNav">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-white fixed-top navbar-custom-alt" id="webNav">
     <a class="navbar-brand" href="/"><img class="eventimg"
         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ25x50nwtJU0xyo2h-EMq13GWNfLp2nhGfyQ&usqp=CAU" alt="logo"
         style="width:200px; height:3.50rem;bottom: 0"></a>
