--- a/Impact.html
+++ b/Impact.html
@@ -61,13 +61,13 @@
           <a class="nav-link" href="Index.html#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#impact">Impacts</a>
+          <a class="nav-link active" href="#impact">Impacts</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="causes.html#causes">Causes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="Index.html#contact">Contact</a>
+          <a class="nav-link" href="Index.html#contact">Contact</a>
         </li>
       </ul>
     </div>
