--- a/causes.html
+++ b/causes.html
@@ -50,19 +50,13 @@
     <div class="collapse navbar-collapse" id="main_nav">
       <ul class="navbar-nav ml-auto mt-md-n1   float-right">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Index.html#about">About</a>
+          <a class="nav-link" href="/impacts">Impacts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Impact.html#impact">Impacts</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="#causes">Causes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Index.html#contact">Contact</a>
+          <a class="nav-link active" href="/causes">Causes</a>
         </li>
       </ul>
     </div>
@@ -70,10 +64,8 @@
   <!-- ACTUAL NAVIGATION MENU -->
   <ul class="nav__menu" id="menu" tabindex="-1" style="list-style: none;" aria-label="main navigation" hidden>
     <li class="nav__item"><a href="/" class="nav__link">Home</a></li>
-    <li class="nav__item"><a href="Index.html#about" class="nav__link">About</a></li>
-    <li class="nav__item"><a href="Impact.html#impact" class="nav__link">Impacts</a></li>
-    <li class="nav__item"><a href="#causes" class="nav__link">Causes</a></li>
-    <li class="nav__item"><a href="Index.html#contact" class="nav__link">Contact</a></li>
+    <li class="nav__item"><a href="/impacts" class="nav__link">Impacts</a></li>
+    <li class="nav__item"><a href="/causes" class="nav__link">Causes</a></li>
   </ul>
 
   <!-- ANIMATED BACKGROUND ELEMENT -->
@@ -171,7 +163,7 @@
               <div class="card-body">
                 <h5 class="card-title">Financial Support</h5>
                 <p class="card-text">We can do no great things, only small things with great love</p>
-                <a href="#" class="btn btn-primary">Donate By Cash</a>
+                <a href="/donate_in_cash" class="btn btn-primary">Donate By Cash</a>
               </div>
             </div>
           </div>
@@ -185,7 +177,7 @@
               <div class="card-body">
                 <h5 class="card-title">Help The Needy</h5>
                 <p class="card-text">Want to Volunteer or donate some goods and other stuff</p>
-                <a href="#" class="btn btn-primary">Donate By Kind</a>
+                <a href="/donate_in_kind" class="btn btn-primary">Donate By Kind</a>
               </div>
             </div>
           </div>
