--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
           <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Impact.html#impact">Impacts</a>
+          <a class="nav-link" href="/impacts">Impacts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="causes.html#causes">Causes</a>
+          <a class="nav-link" href="/causes">Causes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a>
@@ -67,9 +67,9 @@
   <ul class="nav__menu" id="menu" tabindex="-1" style="list-style: none;" aria-label="main navigation" hidden>
     <li class="nav__item"><a href="/" class="nav__link">Home</a></li>
     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-    <li class="nav__item"><a href="Impact.html#impact" class="nav__link">Impacts</a></li>
-    <li class="nav__item"><a href="causes.html#causes" class="nav__link">Causes</a></li>
-    <li class="nav__item"><a href="Index.html#contact" class="nav__link">Contact</a></li>
+    <li class="nav__item"><a href="/impacts" class="nav__link">Impacts</a></li>
+    <li class="nav__item"><a href="/causes" class="nav__link">Causes</a></li>
+    <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
   </ul>
 
   <!-- ANIMATED BACKGROUND ELEMENT -->
